--- a/style/main 1.css
+++ b/style/main 1.css
@@ -1,5 +1,10 @@
+@import './fonts.css';
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body{
+    font-family: 'Raleway';
 }
