--- a/style/main 2.css
+++ b/style/main 2.css
@@ -1,7 +1,243 @@
 @import './fonts.css';
+
 *{
-    padding:0;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Raleway';
 }
+.container{
+    padding: 0 10px;
+     max-width: 1115px;
+     width: 100%;  
+     margin: 0 auto;    
+}
+.header{
+    background: #0C0C0C;
+}
+.header__nav{
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header__navbar-box{
+    display: flex;
+    align-items:center ;
+    column-gap:5px ;
+}
+.header__navbar-text{
+    font-family: 'Roboto';
+    font-weight: 400;
+font-size: 16px;
+color: #ffffff;
+}
+.header__navbar-list{
+    margin: 20px 0;
+    display: flex;
+    list-style: none;
+    column-gap: 20px ;
+}
+.header__navbar-link{
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.main__info{
+    background: #000000;
+    border: 1px solid rgba(125, 115, 115, 0.5);
+    backdrop-filter: blur(7.5px); 
+}
+.main__info-navbar{
+    display: flex;
+    justify-content: space-between;
+}
+.main__info-btn{
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 36px;
+    color: white;
+    background: rgba(10, 148, 24, 0.75);
+border: 4px solid #06600F;
+border-radius: 4px;
+width: 216px;
+height: 53px;
+margin: 6px;
+}
+.main__info-list{
+  display: flex;
+  align-items: center;
+  list-style: none;
+  column-gap: 27px;
+  padding: 12px;
+
+}
+.main__info-link{
+    text-decoration: none;
+    color: white;
+    padding: 22px 14px;
+}
+.main__info-link:hover{
+    transition: .7s;
+    background: rgba(105, 207, 23, 0.75); 
+}
+.main__intro{
+    background: url(../img/food-burger-wallpaper-preview\ 1.jpg) top / cover no-repeat ;
+    height: 850px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main__intro-title{
+    font-weight: 900;
+font-size: 72px;
+line-height: 85px;
+color: #69CF17;
+}
+.main__intro-text-1{
+    font-weight: 400;
+font-size: 36px;
+color: #69CF17;
+
+}
+.main__intro-text-2{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+.main__intro-btn-box{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.main__intro-btn-1{
+    background: rgba(105, 207, 23, 0.5);
+backdrop-filter: blur(9px);
+font-weight: 100;
+font-size: 50px;
+color: #FFFFFF;
+border: none;
+outline: none;
+cursor: pointer;
+width:  285px;
+height: 103px;
+}
+.main__intro-btn-2{
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    background: linear-gradient(90deg, #69CF17 0%, #417D11 100%);
+    border-radius: 6px;
+    width: 255px;
+    height: 51px;
+    outline: none;
+    cursor: pointer;
+    border: none; 
+}
+/*  */
+.main__about{
+    background:#0C0C0C ;
+    padding: 30px 0;
+}
+
+.main__about-img{
+    background:linear-gradient(0deg, rgba(12, 12, 12, 0.44), rgba(12, 12, 12, 0.44)), url(../img/photo_cropped\ 1.jpg);
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+
+
+}
+.main__about-img-text{
+    text-transform: uppercase;
+    color: rgba(105, 207, 23, 0.7);   
+    text-shadow: 0px 0px 15px rgba(191, 171, 171, 0.4);
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 65px;
+}
+.main__about-text{
+    font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 25px;
+text-align: justify;
+color: #FFFFFF;
+}
+/*  */
+
+.main__location{
+    background: #FFFFFF;
+    text-align: center;
+    padding-top: 20px;
+}
+.main__location-title{
+    color: #69CF17;
+    font-weight: 700;
+font-size: 50px;
+margin-bottom: 20px;
+}
+.main__location-img{
+  width: 100%;
+}
+.footer__info{
+   background: linear-gradient(180deg, #000000 0%, rgb(106, 207, 23) 100%);
+}
+.footer__info-box{
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__info-btn{
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 36px;
+    color: white;
+    background: rgba(10, 148, 24, 0.75);
+border: 4px solid #06600F;
+border-radius: 4px;
+width: 216px;
+height: 53px;
+}
+.footer__info-text{
+    font-family: 'Roboto';
+    font-weight: 700;
+font-size: 20px;
+line-height: 23px;
+color: #FFFFFF;
+}
+.footer__info-list{
+    list-style: none;
+    padding: 81px 0 ;
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+
+}
+.footer__info-link{
+   text-decoration: none;
+   color: #FFFFFF;
+   
+}
+.footer__last-box{
+    background:  #1A3406;
+    text-align: center;
+}
+.footer__last-text{
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+color: #FFFFFF;
+padding: 19px 0;
+}
+
+  
